--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.4",
     "@codemirror/theme-one-dark": "^6.1.3",
+    "@codemirror/view": "^6.38.4",
     "@uiw/react-codemirror": "^4.25.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
